add realtime and rag
Entire-Checkpoint: 2367a1e4766f
